Ensure button section does not get squashed
Wrap title around icons

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1098,6 +1098,7 @@ input[type=checkbox].field-lock + label:before,
 .content-actions {
   gap: 10px;
   display: flex;
+  width: 100%;
 
   .content-viewer-actions > .btn,
   .content-viewer-actions > .btn-group,
